--- a/ai-training/how-to-configure.mdx
+++ b/ai-training/how-to-configure.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Как настроить Сашу для моей задачи?"
+title: "Обучение нейросети"
 description: "Подробное руководство по созданию и настройке скиллбейса"
 icon: "tally-3"
 ---
