--- a/ai-training/improving-quality.mdx
+++ b/ai-training/improving-quality.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Как улучшить качество работы ИИ?"
+title: "Промпт-инжиниринг"
 description: "Эффективные методы повышения качества диалогов и конверсии нейросети"
 icon: "trending-up"
 ---
