--- a/ai-training/quick-start.mdx
+++ b/ai-training/quick-start.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Быстрый старт"
 description: "Как быстро обучить минимально жизнеспособную версию нейросети под свою задачу"
-icon: "asterisk"
+icon: "tally-1"
 ---
 
 Для преодоления страха белого листа мы создали функцию «Быстрый старт», с помощью которой вы можете обучить минимально жизнеспособную версию нейросети под свою задачу за несколько минут.
