--- a/ai-training/success-factors.mdx
+++ b/ai-training/success-factors.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Ключевые факторы успеха"
+title: "Факторы успеха"
 description: "Основные элементы, которые определяют эффективность работы с Sasha AI"
 icon: "target"
 ---
