--- a/ai-training/testing.mdx
+++ b/ai-training/testing.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Тестирование искусственного интеллекта"
+title: "Тестирование"
 description: "Руководство по тестированию и отладке скиллбейсов в режиме реального времени"
 icon: "test-tube"
 ---
