--- a/ai-training/voice-settings.mdx
+++ b/ai-training/voice-settings.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Настройки голоса"
+title: "Настройка голоса"
 description: "Тонкая настройка голоса и речевых параметров нейросети"
 icon: "mic"
 ---
