--- a/ai-training/what-sasha-knows.mdx
+++ b/ai-training/what-sasha-knows.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Что Саша умеет по умолчанию?"
+title: "Базовые знания"
 description: "Обзор базовых возможностей и знаний нейросети Саша"
 icon: "tally-2"
 ---
