--- a/common-mistakes/ai-training/configuring-unconfigurable.mdx
+++ b/common-mistakes/ai-training/configuring-unconfigurable.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Настройка ненастраиваемого"
+title: "Ошибка 4"
 description: "Попытки настроить через скиллбейс то, что настраивается в других разделах"
 ---
 
