--- a/common-mistakes/ai-training/overtraining.mdx
+++ b/common-mistakes/ai-training/overtraining.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Соблазн переусердствовать"
+title: "Ошибка 3"
 description: "Ошибка чрезмерного количества инструкций в скиллбейсах"
 ---
 
