--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Введение
+title: Приветствие
 description: "Единственный и обязательный к изучению источник информации по вопросам, связанным с Sasha AI"
 icon: "hand"
 ---
