--- a/integrations/call-results-transfer.mdx
+++ b/integrations/call-results-transfer.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Передача результатов звонков"
+title: "Передача лидов"
 description: "Настройка интеграций для передачи результатов обзвона в CRM и другие системы"
 ---
 
