--- a/lead-generation/converting-leads-to-revenue.mdx
+++ b/lead-generation/converting-leads-to-revenue.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Как превращать лиды в выручку?"
+title: "Лиды в деньги"
 description: "Практические принципы конвертации лидов в оплаты через построение доверительных отношений"
 icon: "tally-3"
 ---
