--- a/lead-generation/outbound-sales-psychology.mdx
+++ b/lead-generation/outbound-sales-psychology.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Психология исходящих продаж"
+title: "Психология потребителя"
 description: "Принципы и аксиомы эффективных прямых продаж на основе миллиона исходящих вызовов"
 icon: "tally-2"
 ---
