--- a/lead-generation/why-calls-dont-work.mdx
+++ b/lead-generation/why-calls-dont-work.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Почему звонки не работают?"
+title: "Звонки не работают"
 description: "Основные причины неэффективности холодных звонков и как их преодолеть"
 icon: "tally-1"
 ---
