Обновление документации по интеграции телефонии: добавлено описание для входящих звонков, расширена информация о настройке SIP-транка и упрощены шаги подключения. Уточнены условия использования и ограничения.

--- a/integrations/telephony.mdx
+++ b/integrations/telephony.mdx
@@ -1,15 +1,150 @@
 ---
 title: "Телефония"
-description: "Настройка телефонии для исходящих звонков"
+description: "Настройка телефонии для исходящих и входящих звонков"
 ---
 
-Начнем с основного канала коммуникации. На текущий момент Саша умеет совершать исходящие вызовы с нашей корпоративной телефонии.
+Начнем с основного канала коммуникации. Саша умеет совершать исходящие вызовы с нашей корпоративной телефонии, а также может работать с вашей собственной АТС через SIP-транки.
 
 ## Подключение собственной телефонии
 
-<Info>
-На момент написания документации функционал подключения Саши к вашей АТС не реализован. Мы планируем реализовать подключение Sasha AI к вашему sip-trunk'у в ближайшее время. Следите за обновлениями в телеграм-канале платформы: @sasha_platform
-</Info>
+Теперь вы можете подключить Sasha AI к вашей собственной АТС через SIP-транк. Это позволит использовать ваши номера телефонов для исходящих звонков и принимать входящие вызовы.
+
+### Что такое SIP-транк?
+
+**SIP-транк (SIP Trunk)** — это цифровой канал связи, который позволяет передавать голосовые вызовы через интернет между различными телефонными системами. 
+
+Простыми словами: это мост между вашей АТС и нашей платформой, который позволяет Саше звонить с ваших номеров и принимать входящие вызовы.
+
+### Пошаговая настройка SIP-транка
+
+Рассмотрим процесс настройки на примере **МТС Exolve**:
+
+<Steps>
+  <Step title="Настройка SIP-транка в платформе">
+    1. В сайдбаре откройте вкладку **"Интеграции"**
+    2. Перейдите на таб **"SIP-транки"**
+    3. Нажмите кнопку **"Создать SIP-транк"**
+    
+    Откроется модальное окно для ввода параметров подключения.
+  </Step>
+
+  <Step title="Создание SIP ID в МТС Exolve">
+    1. Перейдите на [dev.exolve.ru/sips](https://dev.exolve.ru/sips)
+    2. Создайте новый SIP ID
+    3. Получите учетные данные:
+       - **Username** (имя пользователя)
+       - **Password** (пароль)
+       - **Domain** (домен)
+  </Step>
+
+  <Step title="Подключение SIP-транка">
+    1. Вернитесь в модальное окно на нашем сервисе
+    2. Введите полученные данные из МТС Exolve
+    3. Нажмите **"Создать"**
+    4. В таблице напротив SIP-транка должен появиться статус **"OK (X ms)"**
+  </Step>
+
+  <Step title="Импорт номера телефона">
+    1. В сайдбаре нажмите **"Номера телефонов"**
+    2. Нажмите **"Импортировать номер"**
+    3. Заполните форму:
+       - **Лейбл** — название для удобства
+       - **Номер телефона** — ваш номер
+       - **SIP-транк** — выберите созданный транк
+    
+    <Note>
+    Запишите IP-адрес нашей телефонии: **176.124.219.217** — он понадобится на следующем шаге.
+    </Note>
+  </Step>
+
+  <Step title="Настройка SIP-транка в МТС Exolve">
+    1. Вернитесь на [dev.exolve.ru/sips](https://dev.exolve.ru/sips)
+    2. Создайте новый SIP-транк
+    3. Укажите IP-адрес нашей телефонии: **176.124.219.217**
+    4. Закрепите номер телефона для исходящих вызовов
+    5. Нажмите **"Создать SIP-транк"**
+    6. Вернитесь в нашу форму и нажмите **"Добавить номер"**
+    
+    <Tip>
+    Теперь ваш номер готов для исходящих звонков через созданный SIP-транк!
+    </Tip>
+  </Step>
+
+  <Step title="Настройка приема входящих вызовов">
+    1. Перейдите на [dev.exolve.ru/numbers](https://dev.exolve.ru/numbers)
+    2. Откройте настройки вашего номера
+    3. Перейдите в таб **"Переадресация"**
+    4. Настройте переадресацию на созданный SIP-транк
+    
+    <Info>
+    Это перенаправит входящие звонки на ваш номер к нашей АТС для обработки.
+    </Info>
+  </Step>
+
+  <Step title="Привязка номеров к колл-листу">
+    1. Откройте нужный колл-лист или создайте новый
+    2. Перейдите в таб **"Управление"**
+    3. Найдите раздел **"Номера телефонов"**
+    4. Выберите номера для:
+       - **Исходящих звонков** (карусель)
+       - **Приема входящих вызовов**
+    
+    <Note>
+    При входящем звонке Саша будет использовать тот же скиллбейз, каналы связи и вебхуки, что и для исходящих звонков.
+    </Note>
+  </Step>
+</Steps>
+
+<Tip>
+**Готово!** Теперь Саша может использовать ваши номера для исходящих звонков и принимать входящие вызовы с автоматической обработкой.
+</Tip>
+
+## Схема подключения SIP-транка
+
+Для лучшего понимания процесса подключения, рассмотрим схему взаимодействия компонентов:
+
+```mermaid
+graph TB
+    subgraph ExolveGroup["МТС Exolve"]
+        A["dev.exolve.ru"]
+        B["SIP ID"]
+        C["Номер телефона"]
+        D["SIP-транк"]
+    end
+    
+    subgraph SashaGroup["Sasha AI Platform"]
+        E["Интеграции"]
+        F["SIP-транки"]
+        G["Номера телефонов"]
+        H["Колл-листы"]
+    end
+    
+    subgraph TelecomGroup["Телефонная связь"]
+        I["Входящие звонки"]
+        J["Исходящие звонки"]
+        K["IP-адрес платформы"]
+    end
+    
+    A --> B
+    B --> E
+    E --> F
+    F --> G
+    C --> D
+    D --> K
+    K --> G
+    G --> H
+    H --> I
+    H --> J
+```
+
+<Note>
+**Принцип работы:**
+1. Создаете SIP ID в МТС Exolve и получаете учетные данные
+2. Настраиваете SIP-транк в Sasha AI с этими данными
+3. Импортируете номер телефона и привязываете к SIP-транку
+4. Настраиваете переадресацию входящих вызовов в МТС Exolve
+5. Привязываете номера к колл-листам для использования
+</Note> 
 
 ## Возможности нашей телефонии
 
@@ -31,12 +166,12 @@ description: "Настройка телефонии для исходящих з
 <Note>
 Стоимость телефонии учтена в стоимости минуты и не тарифицируется дополнительно.
 
-В случае, если вы хотите подключить собственную АТС по sip-trunk'у — при покупке тарифа вас ждет дополнительная скидка 1,5 рубля за минуту. Для ее получения обратитесь в наш отдел продаж.
+При подключении собственной АТС по SIP-транку действует дополнительная скидка **1,5 рубля за минуту**. Для ее получения обратитесь в наш отдел продаж.
 </Note>
 
 ## Ограничения нашей телефонии
 
-На текущий момент существует четыре подводных камня в работе с нами:
+На текущий момент существует два подводных камня в работе с нашей телефонией:
 
 ### 1. Ограничение попыток дозвона
 
@@ -50,7 +185,7 @@ description: "Настройка телефонии для исходящих з
 Как следствие, номера попадают в категорию «Спам» намного быстрее, чем должны.
 </Warning>
 
-Таковы наши условия. Пользуйтесь из коробки или ждите возможности подключения собственной АТС к Sasha AI.
+Таковы наши условия. Пользуйтесь из коробки или используйте собственную АТС через SIP-транк.
 
 ### 2. Ограничение параллельных соединительных линий
 
@@ -63,19 +198,3 @@ description: "Настройка телефонии для исходящих з
 </Tip>
 
 Для расширения этого ограничения перейдите на тариф «Деньги есть», оставив заявку в разделе «Тарифы».
-
-### 3. Ограничение приема входящих вызовов
-
-На текущий момент система не подразумевает работу с перезвонами со стороны клиента.
-
-Если Саша позвонит клиенту, тот не ответит и решит перезвонить самостоятельно — система сбросит его звонок.
-
-<Info>
-Мы планируем добавить этот функционал в рамках платформы в среднесрочной перспективе. Следите за обновлениями в телеграм-канале платформы: @sasha_platform
-</Info>
-
-### 4. Отсутствие входящей линии
-
-<Info>
-Мы планируем добавить функционал подключения Sasha AI к вашей входящей линии по sip-trunk'у в ближайшее время. Следите за обновлениями в телеграм-канале платформы: @sasha_platform
-</Info> 
