Обновление документации по партнерской программе: изменены условия комиссионных вознаграждений, переименованы модели партнерства с "Мастер-франшиза" на "Амбассадор", уточнены требования и порядок расчетов.

--- a/partners/affiliate-program.mdx
+++ b/partners/affiliate-program.mdx
@@ -28,7 +28,7 @@ icon: "handshake"
   </Card>
   
   <Card title="От 20 000 руб. ежемесячно" icon="chart-line">
-    Получайте от 20% до 25% комиссионного вознаграждения от ежемесячных оплат подписок клиентов за использование платформы. Этот доход является "пожизненным", пока вы являетесь активным куратором клиента.
+    Получайте от 10% до 25% комиссионного вознаграждения от ежемесячных оплат подписок клиентов за использование платформы. Этот доход является "пожизненным".
   </Card>
   
   <Card title="Внедряйте классный продукт" icon="rocket">
@@ -71,27 +71,27 @@ icon: "handshake"
         Достаточно иметь первого клиента. Процесс включает подачу **заявки**, верификацию и подписание **партнерского договора**.
       </Accordion>
 
-      **Вознаграждение:** Партнерская скидка 20-25% на оплату подписок конечных клиентов.
+      **Вознаграждение:** Партнерская скидка 20-25% на оплату подписок для конечных клиентов.
     </Card>
   </Tab>
 
-  <Tab title="Мастер-франшиза">
-    <Card title="Мастер-франшиза" icon="crown">
-      **Описание:** Для партнеров, имеющих широкую сеть контактов среди потенциальных технических интеграторов и заинтересованных в развитии партнерской сети Sasha AI.
+  <Tab title="Амбассадор">
+    <Card title="Амбассадор" icon="crown">
+      **Описание:** Для партнеров, имеющих широкую сеть контактов среди крупных клиентов, потенциальных технических интеграторов заинтересованных в использовании продукта Sasha AI.
 
       <Accordion title="Ваша роль">
-        Привлечение, онбординг и поддержка других Технических партнеров.
+        Рекомендация сервиса техническим партнерам и конечным клиентам, без аккаунтинга и сопровождения.
       </Accordion>
 
       <Accordion title="Требования">
-        Подача заявки, прохождение сертификации (подтверждение наличия ресурсов для развития сети), готовность завести от 5+ новых Технических Партнеров при старте.
+        Подача заявки, прохождение сертификации (подтверждение наличия ресурсов для развития сети), готовность завести от 5 пользователей при старте.
       </Accordion>
 
       <Accordion title="Вход в партнерскую модель">
-        Подача **заявки**, прохождение сертификации, предоставление информации о потенциальных партнерах.
+        Подача **заявки**, прохождение сертификации, предоставление информации о потенциальных клиентах.
       </Accordion>
 
-      **Вознаграждение:** 3-5% от суммарного объема оплат всех клиентов, привлеченных Техническими партнерами вашей сети.
+      **Вознаграждение:** 5-10% от суммарного объема оплат всех клиентов, привлеченных по вашей реферальной ссылке.
     </Card>
   </Tab>
 
@@ -103,7 +103,7 @@ icon: "handshake"
 </Tabs>
 
 <Note>
-В рамках стандартных моделей Технического Партнера и Мастер Франшизы эксклюзивность по территориям или отраслям не предоставляется.
+В рамках стандартных моделей Технического Партнера и Амбассадора эксклюзивность по территориям или отраслям не предоставляется.
 </Note>
 
 ### Схема взаимодействия партнеров
@@ -112,9 +112,9 @@ icon: "handshake"
   flowchart LR
     subgraph partners[Партнерская сеть]
         direction TB
-        master[Мастер-франшиза] --> tech1[Технический партнер 1]
+        master[Амбассадор] --> tech1[Технический партнер 1]
         master --> tech2[Технический партнер 2]
-        master --> tech3[Технический партнер 3]
+        master --> tech3[Конечный клиент 1]
     end
     subgraph clients[Клиентская база]
         direction TB
@@ -129,7 +129,7 @@ icon: "handshake"
     tech3 --> client3
 ```
 
-## Наши ожидания от партнера
+## Наши ожидания от Технического партнера
 
 Успех партнерства с Sasha AI строится на вашей активной и квалифицированной работе с конечным клиентом. От технических партнеров мы ожидаем полного цикла взаимодействия с клиентом
 
@@ -187,19 +187,19 @@ icon: "handshake"
         Фактически, вы получаете от клиента полную стоимость подписки (по рекомендованной цене или выше, если клиент согласен на вашу цену), а при пополнении баланса в партнерском кабинете платите на 20-25% меньше, оставляя эту разницу себе.
       </Accordion>
 
-      <Accordion title="Для партнеров по модели 'Мастер франшиза'">
+      <Accordion title="Для партнеров по модели 'Амбассадор'">
         Вы получаете **прямые выплаты** (в рублях на юридическое лицо) в размере процента от суммарного объема **пополнений клиентов всех технических партнеров в вашей сети**.
 
         | Суммарный объем пополнений всей вашей партнерской сети за месяц | Ваша комиссия |
         |------------------------------------------------------------------|---------------|
-        | Более 5 000 000 рублей                                          | **5%**        |
-        | 5 000 000 рублей и менее                                        | **3%**        |
+        | Более 1 000 000 рублей                                          | **10%**        |
+        | 1 000 000 рублей и менее                                        | **5%**        |
       </Accordion>
 
       <Accordion title="Порядок расчетов">
         - Комиссионные (скидка или прямые выплаты) рассчитываются по итогам каждого календарного месяца
         - Технический партнер получает скидку моментально при пополнении
-        - Партнер по модели "Мастер франшиза" может вывести начисленную сумму из своего партнерского кабинета в конце отчетного периода
+        - Партнер по модели "Амбассадор" может вывести начисленную сумму из своего партнерского кабинета в конце отчетного периода
       </Accordion>
 
       <Accordion title="Прозрачность">
@@ -271,7 +271,7 @@ icon: "handshake"
 
 <Steps>
   <Step title="Подача заявки">
-    Оставьте заявку на получение статуса партнера (Технического партнера или Мастер франшизы) через специальную форму. Укажите информацию о вашей компании, опыте работы и планах по развитию направления.
+    Оставьте заявку на получение статуса партнера (Технического партнера или Амбассадора) через специальную форму. Укажите информацию о вашей компании, опыте работы и планах по развитию направления.
   </Step>
   <Step title="Верификация и создание кабинета">
     Мы проводим быструю верификацию вашей заявки (обычно занимает пару часов). После одобрения для вас создается персональный партнерский кабинет в системе Sasha AI с доступом ко всем необходимым инструментам.
@@ -332,9 +332,9 @@ icon: "handshake"
     </Card>
   </Tab>
 
-  <Tab title="Мастер франшиза">
-    <Card title="Мастер франшиза">
-      Для исключения конфликтов партнер закрепляется за вами, когда вы создаете его партнерский кабинет в своем партнерском кабинете. В случае, если ваш партнер захочет перейти на модель сотрудничества с Sasha AI "Мастер франшиза" – его сеть выпадет из вашей. Глубина партнерки конечна и рассчитана на два этажа.
+  <Tab title="Амбассадор">
+    <Card title="Амбассадор">
+      Для исключения конфликтов клиент или партнер закрепляется за вами, когда регистрируется по вашей реферальной ссылке. В случае, если ваш клиент или партнер захочет перейти на модель сотрудничества с Sasha AI "Амбассадор" – его сеть выпадет из вашей. Глубина партнерки конечна и рассчитана на два этажа.
     </Card>
   </Tab>
 </Tabs>
