Обновление документации по настройке телефонии: переработаны шаги настройки SIP-транка для МТС Exolve и добавлен новый раздел для OnlinePBX. Упрощены инструкции и улучшена структура с использованием вкладок.

--- a/integrations/telephony.mdx
+++ b/integrations/telephony.mdx
@@ -15,85 +15,111 @@ description: "Настройка телефонии для исходящих и
 
 Простыми словами: это мост между вашей АТС и нашей платформой, который позволяет Саше звонить с ваших номеров и принимать входящие вызовы.
 
-### Пошаговая настройка SIP-транка
+## Пошаговая настройка
 
-Рассмотрим процесс настройки на примере **МТС Exolve**:
+<Tabs>
+  <Tab title="МТС Exolve">
+    <Steps>
+      <Step title="Создание SIP ID в МТС Exolve">
+        1. Перейдите на [dev.exolve.ru/sips](https://dev.exolve.ru/sips)
+        2. Создайте новый SIP ID
+        3. Получите учетные данные:
+           - **Username** (имя пользователя)
+           - **Password** (пароль)  
+           - **Domain** (домен)
+      </Step>
 
-<Steps>
-  <Step title="Настройка SIP-транка в платформе">
-    1. В сайдбаре откройте вкладку **"Интеграции"**
-    2. Перейдите на таб **"SIP-транки"**
-    3. Нажмите кнопку **"Создать SIP-транк"**
-    
-    Откроется модальное окно для ввода параметров подключения.
-  </Step>
+      <Step title="Импорт номера с настройкой SIP-транка">
+        1. В сайдбаре нажмите **"Номера телефонов"**
+        2. Нажмите **"Импортировать номер"**
+        3. Заполните основную информацию:
+           - **Лейбл** — название для удобства
+           - **Номер телефона** — ваш номер
+        4. В разделе **"Настройка SIP-транка"** введите данные из МТС Exolve:
+           - **Хост SIP-сервера** — домен из МТС Exolve
+           - **Имя пользователя** — username из МТС Exolve
+           - **Пароль** — password из МТС Exolve
+        
+        <Note>
+        Запишите IP-адрес нашей телефонии: **176.124.219.217** — он понадобится на следующем шаге.
+        </Note>
+      </Step>
 
-  <Step title="Создание SIP ID в МТС Exolve">
-    1. Перейдите на [dev.exolve.ru/sips](https://dev.exolve.ru/sips)
-    2. Создайте новый SIP ID
-    3. Получите учетные данные:
-       - **Username** (имя пользователя)
-       - **Password** (пароль)
-       - **Domain** (домен)
-  </Step>
+      <Step title="Настройка SIP-транка в МТС Exolve">
+        1. Вернитесь на [dev.exolve.ru/sips](https://dev.exolve.ru/sips)
+        2. Создайте новый SIP-транк
+        3. Укажите IP-адрес нашей телефонии: **176.124.219.217**
+        4. Закрепите номер телефона для исходящих вызовов
+        5. Нажмите **"Создать SIP-транк"**
+        6. Вернитесь в нашу форму и нажмите **"Добавить номер"**
+        
+        <Tip>
+        Теперь ваш номер готов для исходящих звонков через созданный SIP-транк!
+        </Tip>
+      </Step>
 
-  <Step title="Подключение SIP-транка">
-    1. Вернитесь в модальное окно на нашем сервисе
-    2. Введите полученные данные из МТС Exolve
-    3. Нажмите **"Создать"**
-    4. В таблице напротив SIP-транка должен появиться статус **"OK (X ms)"**
-  </Step>
+      <Step title="Настройка приема входящих вызовов">
+        1. Перейдите на [dev.exolve.ru/numbers](https://dev.exolve.ru/numbers)
+        2. Откройте настройки вашего номера
+        3. Перейдите в таб **"Переадресация"**
+        4. Настройте переадресацию на созданный SIP-транк
+        
+        <Info>
+        Это перенаправит входящие звонки на ваш номер к нашей АТС для обработки.
+        </Info>
+      </Step>
 
-  <Step title="Импорт номера телефона">
-    1. В сайдбаре нажмите **"Номера телефонов"**
-    2. Нажмите **"Импортировать номер"**
-    3. Заполните форму:
-       - **Лейбл** — название для удобства
-       - **Номер телефона** — ваш номер
-       - **SIP-транк** — выберите созданный транк
-    
-    <Note>
-    Запишите IP-адрес нашей телефонии: **176.124.219.217** — он понадобится на следующем шаге.
-    </Note>
-  </Step>
+      <Step title="Привязка номеров к колл-листу">
+        1. Откройте нужный колл-лист или создайте новый
+        2. Перейдите в таб **"Управление"**
+        3. Найдите раздел **"Номера телефонов"**
+        4. Выберите номера для:
+           - **Исходящих звонков** (карусель)
+           - **Приема входящих вызовов**
+        
+        <Note>
+        При входящем звонке Саша будет использовать тот же скиллбейз, каналы связи и вебхуки, что и для исходящих звонков.
+        </Note>
+      </Step>
+    </Steps>
+  </Tab>
+  
+  <Tab title="OnlinePBX">
+    <Steps>
+      <Step title="Настройка номера и SIP-пользователя в OnlinePBX">
+        1. В панели OnlinePBX настройте **номер от оператора**
+        2. Создайте **SIP-пользователя** (SIP ID)
+        3. Настройте **переадресацию** с номера оператора на SIP-пользователя
+        4. Получите учетные данные SIP-пользователя:
+           - **Username** (имя пользователя)
+           - **Password** (пароль)
+           - **Host** (хост сервера)
+      </Step>
 
-  <Step title="Настройка SIP-транка в МТС Exolve">
-    1. Вернитесь на [dev.exolve.ru/sips](https://dev.exolve.ru/sips)
-    2. Создайте новый SIP-транк
-    3. Укажите IP-адрес нашей телефонии: **176.124.219.217**
-    4. Закрепите номер телефона для исходящих вызовов
-    5. Нажмите **"Создать SIP-транк"**
-    6. Вернитесь в нашу форму и нажмите **"Добавить номер"**
-    
-    <Tip>
-    Теперь ваш номер готов для исходящих звонков через созданный SIP-транк!
-    </Tip>
-  </Step>
+      <Step title="Импорт номера с настройкой SIP-транка (Sasha AI)">
+        1. В сайдбаре нажмите **"Номера телефонов"**
+        2. Нажмите **"Импортировать номер"**
+        3. Заполните основную информацию:
+           - **Лейбл** — название для удобства
+           - **Номер телефона** — ваш номер от оператора
+        4. В разделе **"Настройка SIP-транка"** введите данные SIP-пользователя:
+           - **Хост SIP-сервера** — хост из OnlinePBX
+           - **Имя пользователя** — username SIP-пользователя
+           - **Пароль** — password SIP-пользователя
+        5. Нажмите **"Добавить номер"**
+      </Step>
 
-  <Step title="Настройка приема входящих вызовов">
-    1. Перейдите на [dev.exolve.ru/numbers](https://dev.exolve.ru/numbers)
-    2. Откройте настройки вашего номера
-    3. Перейдите в таб **"Переадресация"**
-    4. Настройте переадресацию на созданный SIP-транк
-    
-    <Info>
-    Это перенаправит входящие звонки на ваш номер к нашей АТС для обработки.
-    </Info>
-  </Step>
-
-  <Step title="Привязка номеров к колл-листу">
-    1. Откройте нужный колл-лист или создайте новый
-    2. Перейдите в таб **"Управление"**
-    3. Найдите раздел **"Номера телефонов"**
-    4. Выберите номера для:
-       - **Исходящих звонков** (карусель)
-       - **Приема входящих вызовов**
-    
-    <Note>
-    При входящем звонке Саша будет использовать тот же скиллбейз, каналы связи и вебхуки, что и для исходящих звонков.
-    </Note>
-  </Step>
-</Steps>
+      <Step title="Привязка номеров к колл-листу">
+        1. Откройте нужный колл-лист или создайте новый
+        2. Перейдите в таб **"Управление"**
+        3. Найдите раздел **"Номера телефонов"**
+        4. Выберите номера для:
+           - **Исходящих звонков** (карусель)
+           - **Приема входящих вызовов**
+      </Step>
+    </Steps>
+  </Tab>
+</Tabs>
 
 <Tip>
 **Готово!** Теперь Саша может использовать ваши номера для исходящих звонков и принимать входящие вызовы с автоматической обработкой.
@@ -105,16 +131,16 @@ description: "Настройка телефонии для исходящих и
 
 ```mermaid
 graph TB
-    subgraph ExolveGroup["МТС Exolve"]
-        A["dev.exolve.ru"]
-        B["SIP ID"]
+    subgraph ProviderGroup["Провайдер телефонии"]
+        A["АТС провайдера"]
+        B["SIP ID / Пользователь"]
         C["Номер телефона"]
-        D["SIP-транк"]
+        D["Настройки переадресации"]
     end
     
     subgraph SashaGroup["Sasha AI Platform"]
-        E["Интеграции"]
-        F["SIP-транки"]
+        E["Форма импорта номера"]
+        F["Настройка SIP-транка"]
         G["Номера телефонов"]
         H["Колл-листы"]
     end
@@ -139,12 +165,11 @@ graph TB
 
 <Note>
 **Принцип работы:**
-1. Создаете SIP ID в МТС Exolve и получаете учетные данные
-2. Настраиваете SIP-транк в Sasha AI с этими данными
-3. Импортируете номер телефона и привязываете к SIP-транку
-4. Настраиваете переадресацию входящих вызовов в МТС Exolve
-5. Привязываете номера к колл-листам для использования
-</Note> 
+1. Настраиваете SIP-пользователя у провайдера телефонии
+2. При импорте номера указываете данные SIP-транка в той же форме
+3. Настраиваете переадресацию входящих вызовов у провайдера
+4. Привязываете номера к колл-листам для использования
+</Note>
 
 ## Возможности нашей телефонии
 
