Изменение заголовка шага импорта номера с настройкой SIP-транка на SIP ID. Удалены устаревшие шаги настройки SIP-транка и добавлены уточнения по переадресации входящих вызовов на созданный SIP ID.

--- a/integrations/telephony.mdx
+++ b/integrations/telephony.mdx
@@ -29,7 +29,7 @@ description: "Настройка телефонии для исходящих и
            - **Domain** (домен)
       </Step>
 
-      <Step title="Импорт номера с настройкой SIP-транка">
+      <Step title="Импорт номера с настройкой SIP ID">
         1. В сайдбаре нажмите **"Номера телефонов"**
         2. Нажмите **"Импортировать номер"**
         3. Заполните основную информацию:
@@ -39,30 +39,13 @@ description: "Настройка телефонии для исходящих и
            - **Хост SIP-сервера** — домен из МТС Exolve
            - **Имя пользователя** — username из МТС Exolve
            - **Пароль** — password из МТС Exolve
-        
-        <Note>
-        Запишите IP-адрес нашей телефонии: **176.124.219.217** — он понадобится на следующем шаге.
-        </Note>
-      </Step>
-
-      <Step title="Настройка SIP-транка в МТС Exolve">
-        1. Вернитесь на [dev.exolve.ru/sips](https://dev.exolve.ru/sips)
-        2. Создайте новый SIP-транк
-        3. Укажите IP-адрес нашей телефонии: **176.124.219.217**
-        4. Закрепите номер телефона для исходящих вызовов
-        5. Нажмите **"Создать SIP-транк"**
-        6. Вернитесь в нашу форму и нажмите **"Добавить номер"**
-        
-        <Tip>
-        Теперь ваш номер готов для исходящих звонков через созданный SIP-транк!
-        </Tip>
       </Step>
 
       <Step title="Настройка приема входящих вызовов">
         1. Перейдите на [dev.exolve.ru/numbers](https://dev.exolve.ru/numbers)
         2. Откройте настройки вашего номера
         3. Перейдите в таб **"Переадресация"**
-        4. Настройте переадресацию на созданный SIP-транк
+        4. Настройте переадресацию на созданный SIP ID
         
         <Info>
         Это перенаправит входящие звонки на ваш номер к нашей АТС для обработки.
