Обновление документации по тарифам: переименованы подписки с "Несерьезный", "Ни туда ни сюда", "Другой разговор", "Джордан Беллфорт" и "Деньги есть" на "Free", "Start", "Pro", "Business" и "Scale" соответственно. Добавлена новая подписка "Enterprise". Обновлены описания и условия для каждой подписки.

--- a/payments-billing/credit-limit.mdx
+++ b/payments-billing/credit-limit.mdx
@@ -13,10 +13,11 @@ description: "Использование кредитного лимита и у
 
 | Подписка | Минут в месяц | Кредитный лимит |
 | :---- | :---- | :---- |
-| **Несерьезный** | 300 минут | 3.000 рублей |
-| **Ни туда ни сюда** | 1000 минут | 9.000 рублей |
-| **Другой разговор** | 5000 минут | 40.000 рублей |
-| **Джордан Беллфорт** | 20000 минут | 140.000 рублей |
+| **Free** | 100 минут | 0 рублей |
+| **Start** | 300 минут | 3.000 рублей |
+| **Pro** | 1000 минут | 9.000 рублей |
+| **Business** | 5000 минут | 40.000 рублей |
+| **Scale** | 20000 минут | 140.000 рублей |
 
 ## Как работает кредитный лимит
 
