--- a/index.mdx
+++ b/index.mdx
@@ -4,6 +4,14 @@ description: "Единственный и обязательный к изуче
 icon: "hand"
 ---
 
+<Note>
+**Для экспертов по проверке программного обеспечения:**
+
+- [ОПИСАНИЕ ФУНКЦИОНАЛЬНЫХ ХАРАКТЕРИСТИК ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ](https://docs.google.com/document/d/1jlOo3lA0ORbNbFdl6HsRRAns07l9xoE_aFNO364VSy8/edit?usp=sharing)
+- [ИНСТРУКЦИЯ ПО УСТАНОВКЕ ЭКЗЕМПЛЯРА ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ ДЛЯ ПРОВЕДЕНИЯ ЭКСПЕРТНОЙ ПРОВЕРКИ](https://docs.google.com/document/d/1dQS-QyUSivuXStBMy8nf85sqDec0HfpMlhSBEA2D4Kw/edit?usp=sharing)
+- [ИНФОРМАЦИЯ, НЕОБХОДИМАЯ ДЛЯ ЭКСПЛУАТАЦИИ ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ](https://docs.trysasha.ru)
+</Note>
+
 ## Знакомство с платформой
 
 Салют! Вы попали в базу знаний Sasha AI — единственный и обязательный к изучению источник информации по вопросам, связанным с Sasha AI.
