--- a/payments-billing/credit-limit.mdx
+++ b/payments-billing/credit-limit.mdx
@@ -14,10 +14,9 @@ description: "Использование кредитного лимита и у
 | Подписка | Минут в месяц | Кредитный лимит |
 | :---- | :---- | :---- |
 | **Free** | 100 минут | 0 рублей |
-| **Start** | 300 минут | 3.000 рублей |
-| **Pro** | 1000 минут | 9.000 рублей |
-| **Business** | 5000 минут | 40.000 рублей |
-| **Scale** | 20000 минут | 140.000 рублей |
+| **Test** | 1000 минут | 12.250 рублей |
+| **Pilot** | 5000 минут | 44.500 рублей |
+| **Business** | 16000 минут | 124.500 рублей |
 
 ## Как работает кредитный лимит
 
