--- a/payments-billing/subscriptions.mdx
+++ b/payments-billing/subscriptions.mdx
@@ -28,11 +28,10 @@ description: "Тарификация и модель оплаты сервиса
 
 | Подписка | Описание | Минут | Исходящих диалогов (+-) | Стоимость минуты | Стоимость подписки | Кредитный лимит |
 | :---- | :---- | :---- | :---- | :---- | :---- | :---- |
-| **Free** | Для новичков. Попробовать самый продвинутый AI для общения с клиентами в России | 100 в месяц | 75 в месяц | 0 | 0 | - |
-| **Start** | Для сомневающихся. Протестировать гипотезу с Sasha AI на небольшом клиентском сегменте | 300 в месяц | 225 в месяц | 21,5 рублей | 6.450 рублей в месяц | 3.000 рублей в месяц |
-| **Pro** | Для микробизнеса. Автоматизировать сервисные точки касания, исследования, входящую линию | 1000 в месяц | 750 в месяц | 19,5 рублей | 19.500 рублей в месяц | 9.000 рублей в месяц |
-| **Business** | Для малого бизнеса. Построить систему для генерации квалифицированных лидов | 5000 в месяц | 3.750 в месяц | 17,5 рублей | 87.500 рублей в месяц | 40.000 рублей в месяц |
-| **Scale** | Для среднего бизнеса. Регулярно тестировать и масштабировать связки по привлечению клиентов | 20000 в месяц | 15.000 в месяц | 15,5 рублей | 310.000 рублей в месяц | 140.000 рублей в месяц |
+| **Free** | Для новичков. Попробовать самый продвинутый AI для общения с клиентами в России | 100 в месяц | 75 в месяц | 30 рублей | 0 | 0 рублей |
+| **Test** | Для сомневающихся. Протестировать гипотезу с Sasha AI на небольшом клиентском сегменте, маме, бабушке | 1000 в месяц | 750 в месяц | 25,5 рублей | 25.500 рублей в месяц | 12.250 рублей в месяц |
+| **Pilot** | Для микробизнеса. Автоматизировать сервисные точки касания, исследования, входящую линию | 5000 в месяц | 3.750 в месяц | 20,5 рублей | 99.000 рублей в месяц | 44.500 рублей в месяц |
+| **Business** | Для среднего бизнеса. Регулярно тестировать и масштабировать связки по привлечению клиентов из базы | 16000 в месяц | 12.000 в месяц | 15,5 рублей | 249.000 рублей в месяц | 124.500 рублей в месяц |
 | **Enterprise** | Для крупного бизнеса. Оптимизировать 75% костов на живых операторов | 50000+ в месяц | 37500 в месяц | - | - рублей в месяц | - рублей в месяц |
 
 ## Как работает поминутная тарификация
