--- a/payments-billing/credit-limit.mdx
+++ b/payments-billing/credit-limit.mdx
@@ -14,9 +14,9 @@ description: "Использование кредитного лимита и у
 | Подписка | Минут в месяц | Кредитный лимит |
 | :---- | :---- | :---- |
 | **Free** | 100 минут | 0 рублей |
-| **Test** | 1000 минут | 12.250 рублей |
-| **Pilot** | 5000 минут | 44.500 рублей |
-| **Business** | 16000 минут | 124.500 рублей |
+| **Pilot** | 5 000 минут | 99 000 рублей |
+| **Business** | 16 000 минут | 249 000 рублей |
+| **ULTIMA** | 55 000 минут | 775 000 рублей |
 
 ## Как работает кредитный лимит
 
