--- a/payments-billing/subscriptions.mdx
+++ b/payments-billing/subscriptions.mdx
@@ -29,7 +29,7 @@ description: "Тарификация и модель оплаты сервиса
 | Подписка | Описание | Минут | Исходящих диалогов (+-) | Стоимость минуты | Стоимость подписки | Кредитный лимит |
 | :---- | :---- | :---- | :---- | :---- | :---- | :---- |
 | **Free** | Для новичков. Попробовать самый продвинутый AI для общения с клиентами в России | 100 в месяц | 75 в месяц | 30 рублей | 0 | 0 рублей |
-| **Test** | Для сомневающихся. Протестировать гипотезу с Sasha AI на небольшом клиентском сегменте, маме, бабушке | 1000 в месяц | 750 в месяц | 25,5 рублей | 25.500 рублей в месяц | 12.250 рублей в месяц |
+| **Test** | Для . Протестировать гипотезу с Sasha AI на небольшом клиентском сегменте, маме, бабушке | 1000 в месяц | 750 в месяц | 25,5 рублей | 25.500 рублей в месяц | 12.250 рублей в месяц |
 | **Pilot** | Для микробизнеса. Автоматизировать сервисные точки касания, исследования, входящую линию | 5000 в месяц | 3.750 в месяц | 20,5 рублей | 99.000 рублей в месяц | 44.500 рублей в месяц |
 | **Business** | Для среднего бизнеса. Регулярно тестировать и масштабировать связки по привлечению клиентов из базы | 16000 в месяц | 12.000 в месяц | 15,5 рублей | 249.000 рублей в месяц | 124.500 рублей в месяц |
 | **Enterprise** | Для крупного бизнеса. Оптимизировать 75% костов на живых операторов | 50000+ в месяц | 37500 в месяц | - | - рублей в месяц | - рублей в месяц |
